# awstanding

./: .gitignore  README.md  setup.cfg
src/awstanding/: .parameter_store.py.swp  exceptions.py  parameter_store.py  s3.py
src/awstanding.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/unit/: test_parameter_store.py  test_s3.py
