[metadata]
name = awstanding
version = 1.0.3
author = Juan Ignacio Sánchez Sampayo
author_email = jiss2891@gmail.com
description = Load parameters from AWS Parameter Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jiss2891/awstanding
project_urls =
    Bug Tracker = https://github.com/jiss2891/awstanding/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src